hphp/hack/test/typecheck/method_redeclaration_covariant_return_error.php.exp
File "method_redeclaration_covariant_return_error.php", line 9, characters 7-7:
Class C does not correctly implement all required members  (Typing[4110])
File "method_redeclaration_covariant_return_error.php", line 12, characters 19-19:
Some members are incompatible with those declared in type T1
Read the following to see why:
File "method_redeclaration_covariant_return_error.php", line 12, characters 19-19:
Member f has the wrong type
File "method_redeclaration_covariant_return_error.php", line 12, characters 30-32:
This is an int
File "method_redeclaration_covariant_return_error.php", line 4, characters 30-32:
It is incompatible with a num (int/float)
