hphp/hack/test/typecheck/method_redeclaration_covariant_return_error.php
<?hh // strict

trait T1 {
  public function f(num $i): num {
    return 4;
  }
}

class C {
  use T1;

  public function f(int $k): int = T1::f;
}
